Update azure-pipelines-du-projet.yml for Azure Pipelines

--- a/azure-pipelines-du-projet.yml
+++ b/azure-pipelines-du-projet.yml
@@ -20,8 +20,8 @@ steps:
     resourceGroupName: 'key-vault'
     location: 'Canada Central'
     templateLocation: 'Linked artifact'
-    csmFile: '$(Build.SourcesDirectory)\AzureResourceGroup12\template-key-vault.json'
-    csmParametersFile: '$(Build.SourcesDirectory)\AzureResourceGroup12\parameters-key-vault.json'
+    csmFile: '$(Build.SourcesDirectory)\template-key-vault.json'
+    csmParametersFile: '$(Build.SourcesDirectory)\parameters-key-vault.json'
     overrideParameters: '-vaults_AdminMDP_name $(nomKey)'
     deploymentMode: 'Validation'
 
@@ -36,7 +36,7 @@ steps:
     resourceGroupName: 'key-vault'
     location: 'Canada Central'
     templateLocation: 'Linked artifact'
-    csmFile: '$(Build.SourcesDirectory)\AzureResourceGroup12\template-key-vault.json'
-    csmParametersFile: '$(Build.SourcesDirectory)\AzureResourceGroup12\parameters-key-vault.json'
+    csmFile: '$(Build.SourcesDirectory)\template-key-vault.json'
+    csmParametersFile: '$(Build.SourcesDirectory)\parameters-key-vault.json'
     overrideParameters: '-vaults_AdminMDP_name $(nomKey)'
     deploymentMode: 'Incremental'
