--- a/azure-pipelines-du-projet.yml
+++ b/azure-pipelines-du-projet.yml
@@ -8,6 +8,9 @@ trigger:
 
 pool: "default"
 
+variables:
+- name: CloudInitContent
+
 steps:
 
 - task: AzureResourceManagerTemplateDeployment@3
@@ -38,4 +41,59 @@ steps:
     csmFile: '$(Build.SourcesDirectory)\template-key-vault.json'
     csmParametersFile: '$(Build.SourcesDirectory)\parameters-key-vault.json'
     overrideParameters: '-vaults_AdminMDP_name $(nomKey)'
+    deploymentMode: 'Incremental'
+    
+- task: PowerShell@2
+  displayName: 'Could Init'
+  inputs:
+    targetType: 'inline'
+    script: |
+      $CloudContent = Get-Content -Path .\Cloud-init.txt -Raw
+      Write-Host $CloudContent
+      $encodedContent = [Convert]::ToBase64String([Text.Encoding]::UTF8.GetBytes($CloudContent))
+      Write-Host $encodedContent
+      Write-Host "##vso[task.setvariable variable=CloudInitContent;]$encodedContent"
+
+- script: |
+    echo $(CloudInitContent)
+
+- task: AzureKeyVault@2
+  displayName: 'Azure key-vault password'
+  inputs:
+    azureSubscription: 'Azure subscription 1(1)(564b93c0-8739-4bbe-8f21-bfa2192d4a08)'
+    KeyVaultName: '$(nomKey)'
+    SecretsFilter: 'MDP'
+    RunAsPreJob: false
+
+- script: | 
+      echo New value $(AzureKey.MDP)
+
+- task: AzureResourceManagerTemplateDeployment@3
+  displayName: 'Validate ARM Template VM'
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'Azure subscription 1(564b93c0-8739-4bbe-8f21-bfa2192d4a08)'
+    subscriptionId: '564b93c0-8739-4bbe-8f21-bfa2192d4a08'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'projet-azure'
+    location: 'Canada Central'
+    templateLocation: 'Linked artifact'
+    csmFile: '$(Build.SourcesDirectory)\azuredeploy.json'
+    csmParametersFile: '$(Build.SourcesDirectory)\azuredeploy.parameters.json'
+    overrideParameters: '-customData $(CloudInitContent) -adminPassword $(MDP)'
+    deploymentMode: 'Validation'
+
+- task: AzureResourceManagerTemplateDeployment@3
+  displayName: 'Deploy ARM Template VM'
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'Azure subscription 1(564b93c0-8739-4bbe-8f21-bfa2192d4a08)'
+    subscriptionId: '564b93c0-8739-4bbe-8f21-bfa2192d4a08'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'projet-azure'
+    location: 'Canada Central'
+    templateLocation: 'Linked artifact'
+    csmFile: '$(Build.SourcesDirectory)\azuredeploy.json'
+    csmParametersFile: '$(Build.SourcesDirectory)\azuredeploy.parameters.json'
+    overrideParameters: '-customData $(CloudInitContent) -adminPassword $(MDP)'
     deploymentMode: 'Incremental'
