--- a/azure-pipelines-du-projet.yml
+++ b/azure-pipelines-du-projet.yml
@@ -49,6 +49,7 @@ steps:
     targetType: 'inline'
     script: |
       $CloudContent = Get-Content -Path .\Cloud-init.txt -Raw
+      echo $(CloudInitContent)
       Write-Host $CloudContent
       $encodedContent = [Convert]::ToBase64String([Text.Encoding]::UTF8.GetBytes($CloudContent))
       Write-Host $encodedContent
